samples/spring-k8s-demo/k8s-services.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprint-service
spec:
  type: NodePort
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
